--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --legacy-watch src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.10.2",
     "nodemon": "^3.1.4"
